<resources>
    <string name="app_name">工科助手</string>
    <string name="app_introduction">你的忠实仆从，遂幻工作室出品</string>
    <string name="app_author">Copyright © 2019&#8211;2021 遂幻工作室</string>

    <string name="text_back_exit">再点击一次退出</string>
    <string name="text_back_exit_notice">请再点击一次退出</string>

    <string name="title_agreement">协议与政策</string>
    <string name="text_agreement_summary">同意&lt;a href="http://aidescit.sgpublic.xyz/about/protocol.html">《用户服务协议》&lt;/a>和&lt;a href="http://aidescit.sgpublic.xyz/about/privacy.html">《隐私政策》&lt;/a></string>
    <string name="text_agreement_content_1">感谢您信任并使用工科助手，在使用工科助手服务前，请仔细阅读&lt;a href="http://aidescit.sgpublic.xyz/about/protocol.html">《用户服务协议》&lt;/a>和&lt;a href="http://aidescit.sgpublic.xyz/about/privacy.html">《隐私政策》&lt;/a>的全部内容，以了解用户权益义务和个人信息处理规则。</string>
    <string name="text_agreement_content_2">点击同意即代表您和您的监护人已阅读并同意全部条款。</string>
    <string name="text_login_agreement">您需要同意《用户协议》和《隐私协议》才能继续</string>
    <string name="text_agreement_agree">同意并继续</string>
    <string name="text_agreement_disagree">不同意</string>

    <string name="shortcut_achievement_long">成绩查询</string>
    <string name="shortcut_achievement_short">成绩</string>

    <string name="title_notices_permission">权限申请</string>
    <string name="text_notices_permission">工科助手需要申请日历读写权限用于将课表导入日历以提供课前提醒服务</string>
    <string name="title_notices_permission_denied">未授权，该功能无法使用</string>
    <string name="text_notices_permission_current">无法获取日历信息</string>
    <string name="text_notices_permission_denied">您未授权日历读写权限，我们将无法正常将课表导入日历</string>
    <string name="text_notices_permission_denied_ask">工科助手请求日历读写权限用于将课表导入日历以提供课前提醒服务。请在【设置-应用-工科助手-权限】中开启日历读写权限，以正常使用该功能。</string>
    <string name="text_notices_permission_start">去授权</string>
    <string name="text_notices_permission_setting">去设置</string>
    <string name="text_notices_permission_cancel">暂不授权</string>
    <string name="text_notices_permission_force">仍然继续</string>
    <string name="permission_denied">未授权</string>
    <string name="permission_granted">已授权</string>

    <string name="title_home">首页</string>
    <string name="title_schedule">课表</string>
    <string name="title_itinerary">日程</string>
    <string name="title_news">资讯</string>
    <string name="title_mine">我的</string>
    <string name="title_info">个人信息</string>
    <string name="title_exam">考试安排</string>

    <string name="text_table_week_index">第 %1$d 周</string>

    <string name="title_room">空闲教室</string>
    <string name="text_uid">用户名：%1$s</string>
    <string name="title_achievement">成绩单查询</string>
    <string name="title_category_quick">快捷启动</string>
    <string name="title_category_usual">常用功能</string>
    <string name="title_category_expand">拓展功能</string>
    <string name="title_into_exam">考试安排查询</string>
    <string name="title_into_calendar">课表导入到日历</string>
    <string name="title_evaluate">教学质量评价</string>
    <string name="title_springboard">前往教务系统</string>
    <string name="title_logout">退出登录</string>
    <string name="title_category_other">其他</string>
    <string name="title_about">关于</string>
    <string name="title_more">更多</string>

    <string name="text_home_task_header">%1$d年%2$d月%3$d %4$s</string>
    <string name="text_home_task_doing">进行中 | %1$s</string>
    <string name="text_home_task_right_now">%1$d 分钟开始 | %2$s</string>

    <string name="title_achievement_search">成绩查询</string>
    <string name="title_achievement_re">至今未过的课程</string>
    <string name="text_achievement_search">查询</string>
    <string name="text_achievement_name">课程</string>
    <string name="text_achievement_paper">期末成绩</string>
    <string name="text_achievement_all">在校成绩</string>
    <string name="text_achievement_year">全年</string>
    <string name="text_achievement_achievement">成绩</string>
    <string name="text_achievement_achievement_make">补考成绩</string>
    <string name="text_achievement_achievement_re">重修成绩</string>
    <string name="text_achievement_credit">学分</string>
    <string name="text_achievement_passed_empty">成绩还没有出来呢~</string>
    <string name="text_achievement_failed_empty">恭喜你，所有科目全都及格了哦~</string>

    <string name="title_exam_search">考试安排</string>
    <string name="text_exam_name">科目</string>
    <string name="text_exam_time">时间</string>
    <string name="text_exam_location">地点</string>
    <string name="text_exam_num">座位号</string>
    <string name="text_exam_empty">还没有考试安排哦~</string>

    <string name="title_evaluate_other">其他评价与建议：</string>
    <string name="title_evaluate_other_hint">限50字，可留空</string>
    <string name="title_evaluate_pre">上一步</string>
    <string name="title_evaluate_next">下一步 (%1$s/%2$s)</string>
    <string name="title_evaluate_post">提交</string>
    <string name="title_evaluate_subject">%1$s 教师</string>
    <string name="title_evaluate_same">请勿全部选择相同选项</string>
    <string name="title_evaluate_get_failed">评价详情获取失败</string>
    <string name="title_evaluate_post_failed">评价详情提交失败</string>
    <string name="title_evaluate_post_success">提交成功</string>

    <string name="title_calendar_import">将课表导入日历</string>
    <string name="title_calendar_holiday">假期就别想着上课了，好好玩~</string>
    <string name="title_calendar_preRemind">提前提醒</string>
    <string name="text_calendar_preRemind">上课前是否提前提醒</string>
    <string name="title_calendar_pre_time">提醒时间</string>
    <string name="title_calendar_pre_time_choose">选择提醒时间</string>
    <string name="text_calendar_pre_time">设置提前提醒的时间</string>
    <string name="text_calendar_pre_time_name">分钟</string>
    <string name="title_calendar_getNewest">使用最新课表数据</string>
    <string name="text_calendar_getNewest">设置使用最新获取的数据或缓存数据</string>
    <string name="text_calendar_state">当前状态：</string>
    <string name="text_calendar_insert_new">立即导入</string>
    <string name="text_calendar_insert_re">重新导入</string>
    <string name="text_calendar_insert_success">导入成功</string>
    <string name="text_calendar_insert_failure">导入失败</string>
    <string name="text_calendar_reinsert_failure">删除旧数据失败，请重试</string>
    <string name="text_calendar_setup_failure">初始化失败，请检查日历读写权限</string>
    <string name="text_calendar_delete">删除已导入内容</string>
    <string name="text_calendar_delete_success">删除成功</string>
    <string name="text_calendar_delete_failure">删除失败</string>
    <string name="text_calendar_count_empty">尚未导入</string>
    <string name="text_calendar_count">已导入%1$d条</string>
    <string name="text_calendar_doing_delete">正在删除</string>
    <string name="text_calendar_doing_getData">正在获取课表数据</string>
    <string name="text_calendar_doing_prepare">正在准备导入</string>
    <string name="text_calendar_doing">正在导入第%1$d条</string>
    <string name="text_calendar_doing_warning">正在导入，请等待导入完成</string>

    <string name="text_hello">%1$s，今天是第%2$d周%3$s</string>
    <string name="text_hello_holiday">%1$s，今天是%2$s，祝你假期愉快哦~</string>
    <string name="text_table_next">已为你预先显示下一周课表</string>
    <string name="text_table_empty">暂无数据</string>
    <string name="text_monday">周一</string>
    <string name="text_tuesday">周二</string>
    <string name="text_wednesday">周三</string>
    <string name="text_thursday">周四</string>
    <string name="text_friday">周五</string>
    <string name="text_saturday">周六</string>
    <string name="text_sunday">周日</string>
    <string name="text_lunch">中午</string>
    <string name="text_dinner">晚上</string>

    <string name="text_hello_morning">早上好</string>
    <string name="text_hello_am">上午好</string>
    <string name="text_hello_lunch">中午好</string>
    <string name="text_hello_afternoon">下午好</string>
    <string name="text_hello_dinner">晚上好</string>

    <string name="title_about_feedback">问题反馈</string>
    <string name="title_about_update">检查更新</string>
    <string name="title_about_developer">开发者</string>
    <string name="title_about_agreement"><a href="http://aidescit.sgpublic.xyz/about/protocol.html">《用户服务协议》</a> | <a href="http://aidescit.sgpublic.xyz/about/privacy.html">《隐私政策》</a></string>
    <string name="title_about_license">开源许可</string>

    <string name="title_update_get">有更新版本</string>
    <string name="title_update_already">已是最新版本</string>
    <string name="title_update_error">检查更新出错</string>
    <string name="text_update_content">有更新版本，APK大小 %1$s，是否更新？</string>
    <string name="text_update_content_force">有更新版本，APK大小 %1$s，请更新，否则将无法正常使用工科助手。</string>
    <string name="text_update_version">最新版本：</string>
    <string name="text_update_changelog">更新日志：</string>
    <string name="title_update_download">工科教务更新</string>
    <string name="title_update_is_download">正在下载安装包，请勿重复尝试</string>

    <string name="text_username_edit">输入学号</string>
    <string name="text_password_edit">输入密码</string>
    <string name="text_login_empty">账号或密码为空</string>
    <string name="text_login_failure">登录失败</string>
    <string name="text_login_password">账号或密码错误</string>

    <string name="title_check_logout">确定退出登录？</string>
    <string name="text_check_logout">您确定要退出登录吗？退出登录将无法继续使用“工科助手”。</string>

    <string name="text_loading">正在获取，请稍后……</string>
    <string name="text_load_failed">获取失败</string>
    <string name="text_developing">正在开发中，敬请期待</string>
    <string name="text_coming">更多功能准备中，敬请期待</string>

    <string name="text_ok">确定</string>
    <string name="text_cancel">取消</string>
    <string name="text_back">返回</string>

    <string name="text_check_cancel_login">你确定要退出吗？退出将无法继续使用“工科助手”。</string>
    <string name="title_check_cancel_login">确定退出？</string>

    <string name="title_info_avatar">头像</string>
    <string name="title_info_name">姓名</string>
    <string name="title_info_uid_student">学号</string>
    <string name="title_info_uid_teacher">工号</string>
    <string name="title_info_faculty">学院</string>
    <string name="title_info_specialty">专业</string>
    <string name="title_info_class">班级</string>

    <string name="title_privacy">隐私设置</string>
    <string name="title_privacy_calender">允许工科助手访问日历权限</string>
    <string name="test_privacy_authorized">已授权</string>
    <string name="test_privacy_unauthorized">去设置</string>
    <string name="text_privacy_calender">用于将课表导入日历等。</string>

    <string name="error_setup_failed">应用初始化失败，网络连接异常或服务器维护中</string>
    <string name="error_setup_timeout">应用初始化超时，网络连接异常或服务器维护中</string>
    <string name="error_server_error">服务器内部出错</string>
    <string name="error_load">数据加载出错</string>
    <string name="error_login_expired">登录状态失效，请重新登录</string>
    <string name="error_network">网络似乎开小差了呢(￣△￣；)</string>
    <string name="error_setup">初始化失败(°Д°≡°Д°)</string>
    <string name="error_news_load">数据加载出错(°ー°〃)</string>
    <string name="error_update">检查更新出错(*Φ皿Φ*)</string>
    <string name="error_null">内容不见了呢 _(´ཀ`」 ∠)__</string>
    <string name="error_empty">竟然什么都没有？Σ( ° △ °|||)︴</string>
    <string name="error_loading_more">正在加载更多数据～(￣▽￣～)~</string>
    <string name="error_no_more">死鬼，这里是人家的底线了呢(*/ω＼*)</string>

    <string name="title_function_crash">应用意外退出</string>
    <string name="text_function_crash">非常抱歉，应用受不可抗力意外退出，您可以选择复制错误信息反馈给开发者。</string>
    <string name="text_function_crash_no_message">非常抱歉，应用受不可抗力意外停止，即将退出。</string>
    <string name="text_function_crash_copy">复制错误信息</string>
    <string name="text_function_crash_copy_success">复制成功</string>
    <string name="text_function_crash_exit">下次一定</string>
    <string name="text_function_crash_ok">我知道了</string>
</resources>
