<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="42dp"
    android:paddingStart="8dp"
    android:paddingEnd="8dp">
    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:text="@string/text_achievement_name"
        android:textSize="14sp"
        android:textColor="@color/color_table_title"
        android:textStyle="bold"
        android:gravity="center"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/text_achievement_achievement"
        android:textSize="14sp"
        android:textColor="@color/color_table_title"
        android:textStyle="bold"
        android:gravity="center" />
    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/text_achievement_achievement_make"
        android:textSize="14sp"
        android:textColor="@color/color_table_title"
        android:textStyle="bold"
        android:gravity="center" />
    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/text_achievement_achievement_re"
        android:textSize="14sp"
        android:textColor="@color/color_table_title"
        android:textStyle="bold"
        android:gravity="center"/>
</LinearLayout>