<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:textColor="@color/color_font_normal"
        android:textStyle="bold"
        android:text="@string/title_agreement" />
    <TextView
        android:id="@+id/dialog_agreement_content_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/color_font_dark"
        android:text="@string/text_agreement_content_1"
        android:layout_marginTop="16dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/color_font_dark"
        android:layout_marginTop="16dp"
        android:text="@string/text_agreement_content_2" />
</LinearLayout>