<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".activity.Exam">
    <FrameLayout
        android:id="@+id/exam_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/exam_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_gravity="start"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_back"
            app:tint="@color/color_font_normal"
            android:contentDescription="@string/text_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/title_exam_search"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/color_font_normal"/>
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:orientation="horizontal"
        android:padding="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:text="@string/text_exam_name"
            android:textSize="14sp"
            android:textColor="@color/color_table_title"
            android:textStyle="bold"
            android:gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:text="@string/text_exam_time"
            android:textSize="14sp"
            android:textColor="@color/color_table_title"
            android:textStyle="bold"
            android:gravity="center" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:text="@string/text_exam_location"
            android:textSize="14sp"
            android:textColor="@color/color_table_title"
            android:textStyle="bold"
            android:gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/text_exam_num"
            android:textSize="14sp"
            android:textColor="@color/color_table_title"
            android:textStyle="bold"
            android:gravity="center"/>
    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/exam_refresh">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:scrollbars="none"
            android:overScrollMode="never">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp">
                    <TextView
                        android:id="@+id/exam_table_empty"
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:gravity="center"
                        android:text="@string/text_exam_empty" />
                    <LinearLayout
                        android:id="@+id/exam_table"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:useDefaultMargins="false"/>
                </FrameLayout>
            </LinearLayout>
        </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</LinearLayout>