<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingTop="40dp"
    android:layout_marginBottom="5dp">
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="6"
        android:rowCount="4">
        <TextView
            android:id="@+id/timetable_hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/color_font_normal"
            android:textStyle="bold"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="6" />

        <TextView
            android:id="@+id/timetable_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:maxLines="2"
            android:ellipsize="end"
            android:textSize="14sp"
            android:textColor="@color/color_table_soup"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnSpan="6" />

        <TextView
            android:id="@+id/timetable_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="20dp"
            android:maxLines="1"
            android:textSize="14sp"
            android:textColor="@color/color_table_soup"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnSpan="6"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_monday"
            android:textSize="14sp"
            android:textColor="@color/color_table_title"
            android:textStyle="bold"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnWeight="1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_tuesday"
            android:textSize="14sp"
            android:textColor="@color/color_table_title"
            android:textStyle="bold"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_columnWeight="1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_wednesday"
            android:textSize="14sp"
            android:textColor="@color/color_table_title"
            android:textStyle="bold"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_columnWeight="1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_thursday"
            android:textSize="14sp"
            android:textColor="@color/color_table_title"
            android:textStyle="bold"
            android:layout_row="3"
            android:layout_column="3"
            android:layout_columnWeight="1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_friday"
            android:textSize="14sp"
            android:textColor="@color/color_table_title"
            android:textStyle="bold"
            android:layout_row="3"
            android:layout_column="4"
            android:layout_columnWeight="1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_saturday"
            android:textSize="14sp"
            android:textColor="@color/color_table_title"
            android:textStyle="bold"
            android:layout_row="3"
            android:layout_column="5"
            android:layout_columnWeight="1" />
    </GridLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/timetable_refresh"
        android:layout_marginTop="3dp"
        android:paddingTop="3dp">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            android:overScrollMode="never">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/timetable_grid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">
                    <GridLayout
                        android:id="@+id/timetable_grid_morning"
                        android:layout_width="match_parent"
                        android:layout_height="220dp"
                        android:rowCount="2"
                        android:columnCount="6" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:text="@string/text_lunch"
                        android:textColor="#888888"
                        android:gravity="center"
                        android:textSize="14sp"
                        android:textStyle="bold"/>
                    <GridLayout
                        android:id="@+id/timetable_grid_noon"
                        android:layout_width="match_parent"
                        android:layout_height="220dp"
                        android:rowCount="2"
                        android:columnCount="6" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:text="@string/text_dinner"
                        android:textColor="#888888"
                        android:gravity="center"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                    <GridLayout
                        android:id="@+id/timetable_grid_evening"
                        android:layout_width="match_parent"
                        android:layout_height="110dp"
                        android:rowCount="1"
                        android:columnCount="6" />
                    <TextView
                        android:id="@+id/timetable_index"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:visibility="gone"
                        android:text="@string/text_table_next"
                        android:textColor="@color/color_table_index"
                        android:gravity="center"
                        android:textSize="12sp"
                        android:layout_margin="6dp"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/timetable_empty"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/text_table_empty"
                    android:textColor="@color/color_table_index"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textSize="16sp"/>
            </FrameLayout>
        </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</LinearLayout>