<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    android:layout_marginTop="16dp"
    android:layout_height="68dp">
    <TextView
        android:id="@+id/item_achievement_failed_head"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:text="@string/title_achievement_re"
        android:textSize="15sp"
        android:textColor="@color/color_table_title"
        android:gravity="center"
        android:textStyle="bold"
        android:padding="6dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:id="@+id/item_achievement_failed_name"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:text="@string/text_achievement_name"
        android:textSize="14sp"
        android:textColor="@color/color_table_title"
        android:gravity="center"
        android:textStyle="bold"
        android:padding="6dp"
        app:layout_constraintTop_toBottomOf="@id/item_achievement_failed_head"
        app:layout_constraintRight_toLeftOf="@id/item_achievement_failed_mark"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_weight="2"/>
    <TextView
        android:id="@+id/item_achievement_failed_mark"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:text="@string/text_achievement_achievement"
        android:textSize="14sp"
        android:textColor="@color/color_table_title"
        android:textStyle="bold"
        android:gravity="end"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:paddingStart="6dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/item_achievement_failed_head"
        app:layout_constraintLeft_toRightOf="@id/item_achievement_failed_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_weight="1" />
</androidx.constraintlayout.widget.ConstraintLayout>