<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="io.github.sgpublic.aidescit.activity.About">

    <ImageView
        android:id="@+id/about_back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="15dp"
        android:layout_gravity="start"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_back"
        app:tint="@color/color_font_normal" />

    <ImageView
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_gravity="center"
        android:src="@mipmap/ic_launcher"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/app_name"
        android:textSize="22sp"
        android:textColor="@color/color_font_normal"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/about_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:textColor="@color/color_font_normal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp">

<!--        <TextView-->
<!--            android:id="@+id/about_feedback"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="55dp"-->
<!--            android:gravity="center_vertical"-->
<!--            android:paddingStart="30dp"-->
<!--            android:paddingEnd="30dp"-->
<!--            android:background="?android:attr/selectableItemBackground"-->
<!--            android:text="@string/title_feedback"-->
<!--            android:textSize="16sp"-->
<!--            android:textColor="@color/color_font_normal"/>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/color_mine_parting" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="55dp">
            <ProgressBar
                android:id="@+id/about_progress"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:visibility="invisible"
                android:layout_gravity="end|center"
                android:layout_marginEnd="30dp" />
            <TextView
                android:id="@+id/about_update"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:gravity="center_vertical"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/title_about_update"
                android:textSize="16sp"
                android:textColor="@color/color_font_normal"/>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/color_mine_parting" />

        <TextView
            android:id="@+id/about_developer"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/title_about_developer"
            android:textColor="@color/color_font_normal"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/color_mine_parting" />

        <TextView
            android:id="@+id/about_license"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:gravity="center_vertical"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/title_about_license"
            android:textSize="16sp"
            android:textColor="@color/color_font_normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/color_mine_parting" />
    </LinearLayout>

    <TextView
        android:id="@+id/about_agreement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:text="@string/title_about_agreement"
        android:textSize="12sp"
        android:textColor="#999999"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:text="@string/app_author"
        android:textSize="12sp"
        android:textColor="#999999"/>
</LinearLayout>